--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html style=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>ckchiruka.github.io by ckchiruka</title>
+    <title>Chirag Kashyap</title>
     <link rel="stylesheet" href="./index_files/style.css">
     <script src="./index_files/jquery.min.js.download"></script>
     <script src="./index_files/respond.js.download"></script>
@@ -30,15 +30,11 @@
 
       <section>
         <div id="title">
-          <h1>ckchiruka.github.io</h1>
+          <h1>Chirag Kashyap</h1>
           <p></p>
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/ckchiruka">ckchiruka</a></span>
-          <span class="credits right">Hosted on GitHub Pages — Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h1>Chirag Kashyap</h1>
-<h2>Made for STA141B</h2>
 
 
       </section>
