--- a/index.html
+++ b/index.html
@@ -19,23 +19,16 @@
 :root #header + #content > #left > #rlblock_left
 { display: none !important; }</style></head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/ckchiruka/ckchiruka.github.io">View On GitHub</a></li>
-          
-        </nav>
-      </div><!-- end header -->
-
-    <div class="wrapper">
-
-      <section>
-        <div id="title">
-          <h1>Chirag Kashyap</h1>
-          <p></p>
-          <hr>
-        </div>
+       <section class="page-header">
+      <h1 class="name">Chirag Kashyap</h1>
+      <h2 class="information about me">ckashyap@ucdavis.edu <br>ckchiruka@gmail.com</h2>
+    </section>
 
 
+
+    <footer class="site-footer">
+	Copyright Chirag Kashyap &copy; 2016
+     </footer>
 
       </section>
 
