--- a/index.html
+++ b/index.html
@@ -18,22 +18,19 @@
   <style type="text/css">
 :root #header + #content > #left > #rlblock_left
 { display: none !important; }</style></head>
+
   <body>
-       <section class="page-header">
+       <div style="text-align:center" class="page-header">
       <h1 class="name">Chirag Kashyap</h1>
-      <h2 class="information about me">ckashyap@ucdavis.edu <br>ckchiruka@gmail.com</h2>
-    </section>
+      <h2 class="information about me">Emails<h2>
+      <h3 class="emails">ckashyap@ucdavis.edu <br>ckchiruka@gmail.com</h3>
+    </div>
 
 
 
     <footer class="site-footer">
 	Copyright Chirag Kashyap &copy; 2016
      </footer>
-
-      </section>
-
-    </div>
-
     
   
 
