--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
 { display: none !important; }</style></head>
 
   <body>
-       <div style="text-align:center" class="page-header">
+  <center>
+       <section class="page-header">
       <h1 class="name">Chirag Kashyap</h1>
       <h2 class="information about me">Emails<h2>
       <h3 class="emails">ckashyap@ucdavis.edu <br>ckchiruka@gmail.com</h3>
-    </div>
+    </section>
 
 
-
+    </center>
     <footer class="site-footer">
 	Copyright Chirag Kashyap &copy; 2016
      </footer>
