--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="/assets/css/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <style type="text/css">
+      .page-header {
+      background-image:url("redmoon.jpg");
+      color: #fff;
+      text-shadow: 0px 0px 4px #ccccff;
+      }
+    </style>
 
   <style type="text/css">
 :root #header + #content > #left > #rlblock_left
@@ -23,7 +30,6 @@
   <center>
        <section class="page-header">
       <h1 class="name">Chirag Kashyap</h1>
-      <h2 class="information about me">Emails<h2>
       <h3 class="emails">ckashyap@ucdavis.edu <br>ckchiruka@gmail.com</h3>
     </section>
 
