Hopefully this works

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0038)https://ckchiruka.github.io/index.html -->
 <html style=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+   <head> 
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Chirag Kashyap</title>
     <link rel="stylesheet" href="./index_files/style.css">
@@ -18,13 +18,9 @@
       .page-header {
       background-image:url("redmoon.jpg");
       color: #fff;
-      text-shadow: 0px 0px 4px #ccccff;
       }
     </style>
-
-  <style type="text/css">
-:root #header + #content > #left > #rlblock_left
-{ display: none !important; }</style></head>
+</head>
 
   <body>
   <center>
