--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <center>
        <section class="page-header">
       <h1 class="name">Chirag Kashyap</h1>
-      <h3 class="emails">ckashyap@ucdavis.edu <br>ckchiruka@gmail.com</h3>
+      <h3 class="emails">ckashyap@ucdavis.edu ckchiruka@gmail.com</h3>
     </section>
 
 
