--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <style type="text/css">
       .page-header {
-      background-image:url("redmoon.jpg");
-      color: #fff;
+
       }
     </style>
 </head>
 
   <body>
   <center>
+  <header class="page-header" role="banner">
+  <img src="redmoon.jpg" alt="Banner Image"/>
+    </header>
+  
        <section class="page-header">
       <h1 class="name">Chirag Kashyap</h1>
-      <h3 class="emails">ckashyap@ucdavis.edu ckchiruka@gmail.com</h3>
+      <h3 class="emails">ckashyap@ucdavis.edu <br> ckchiruka@gmail.com</h3>
     </section>
 
 
