--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       left: 0px;
       right: 0px;
       width: 100%;
-      height: 100%;
-      z-index: -1;
+      height: 200px;
       }
     </style>
 </head>
