this might work

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <style type="text/css">
       .page-header {
       background-image:url("redmoon.jpg");
-      top: 0px;
-      width: 100%;
-      height: 200px;
+      min-height: 413px;
+      background-repeat: no-repeat;
+      background-size: 1800px 413px;
+      background-position: center top;
       }
     </style>
 </head>
