--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <style type="text/css">
       .page-header {
+      padding: 0px 0px; 
       background-image:url("redmoon.jpg");
-      min-height: 413px;
       background-repeat: no-repeat;
       background-size: 1800px 413px;
       background-position: center top;
@@ -27,7 +27,7 @@
 
   <body>
   <center>
-       <section class="page-header">
+       <section class="other">
       <h1 class="name">Chirag Kashyap</h1>
       <h3 class="emails">ckashyap@ucdavis.edu <br> ckchiruka@gmail.com</h3>
     </section>
