--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--[if lt IE 8]>
     <link rel="stylesheet" href="/assets/css/ie.css">
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1>
     <style type="text/css">
       .page-header {
       padding: 0px 0px; 
@@ -27,7 +27,7 @@
 
   <body>
   <center>
-       <section class="other">
+       <section class="page-header">
       <h1 class="name">Chirag Kashyap</h1>
       <h3 class="emails">ckashyap@ucdavis.edu <br> ckchiruka@gmail.com</h3>
     </section>
