this is hopeless

--- a/index.html
+++ b/index.html
@@ -1,26 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0038)https://ckchiruka.github.io/index.html -->
-<html style=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<html lang ="en-us">
+<head>
+<meta charset=UTF-8">
     <title>Chirag Kashyap</title>
-    <link rel="stylesheet" href="./index_files/style.css">
-    <script src="./index_files/jquery.min.js.download"></script>
-    <script src="./index_files/respond.js.download"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="/assets/css/ie.css">
-    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1>
+    <link rel="stylesheet" href="./index_files/style.css">
     <style type="text/css">
       .page-header {
-      padding: 0px 0px; 
       background-image:url("redmoon.jpg");
-      background-repeat: no-repeat;
-      background-size: 1800px 413px;
-      background-position: center top;
       }
     </style>
 </head>
