--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset=UTF-8">
     <title>Chirag Kashyap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1>
-    <link rel="stylesheet" href="./index_files/style.css">
+    <link rel="stylesheet" href="./index_files/style.css" media = "screen">
     <style type="text/css">
       .page-header {
       background-image:url("redmoon.jpg");
