--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <!-- saved from url=(0038)https://ckchiruka.github.io/index.html -->
-<html lang ="en-us">
-<head>
-<meta charset=UTF-8">
+<html style=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Chirag Kashyap</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1>
-    <link rel="stylesheet" href="./index_files/style.css" media = "screen">
+    <link rel="stylesheet" href="./index_files/style.css">
+    <script src="./index_files/jquery.min.js.download"></script>
+    <script src="./index_files/respond.js.download"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="/assets/css/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <style type="text/css">
       .page-header {
       background-image:url("redmoon.jpg");
@@ -17,7 +25,7 @@
   <center>
        <section class="page-header">
       <h1 class="name">Chirag Kashyap</h1>
-      <h3 class="emails">ckashyap@ucdavis.edu ckchiruka@gmail.com</h3>
+      <h3 class="emails">ckashyap@ucdavis.edu <br> ckchiruka@gmail.com</h3>
     </section>
 
 
