--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <center>
        <section class="page-header">
       <h1 class="name">Chirag Kashyap</h1>
-      <h3 class="emails">ckashyap@ucdavis.edu <br> ckchiruka@gmail.com</h3>
+      <h3 class="emails">ckashyap@ucdavis.edu</h3>
     </section>
-
-
     </center>
+	<section class ="about-me">
+	<h5 class ="me">About Me</h5>
     <footer class="site-footer">
 	Copyright Chirag Kashyap &copy; 2016
      </footer>
