--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     </section>
     </center>
 	<section class ="about-me">
-	<h5 class ="me">About Me</h5>
+	<h3 class ="me">About Me<br></h5>
+	<h4 class ="about">I am Chirag Kashyap, a statistics major and planned computer science minor at UC Davis. </h4>
     <footer class="site-footer">
 	Copyright Chirag Kashyap &copy; 2016
      </footer>
