--- a/index.html
+++ b/index.html
@@ -32,15 +32,7 @@
       
 <hr />
 
-<p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
-
-<p><a href="another-page">Link to another page</a>.</p>
-
-<p>There should be whitespace between paragraphs.</p>
-
-<p>There should be whitespace between paragraphs. We recommend including a README, or a file with information about your project.</p>
-
-<h1 id="header-1"><a href="#header-1"></a>Header 1</h1>
+<h1 id="header-1"><a href="#header-1"></a>About Me</h1>
 
 <p>This is a normal paragraph following a header. GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.</p>
 
@@ -177,7 +169,7 @@
 
 <h3 id="large-image">Large image</h3>
 
-<p><img src="https://guides.github.com/activities/hello-world/branching.png" alt="" /></p>
+<p><img src="redmoon.jpg" alt="" /></p>
 
 <h3 id="definition-lists-can-be-used-with-html-syntax">Definition lists can be used with HTML syntax.</h3>
 
