--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <![endif]-->
   </head>
   <body>
+	<p><img src="redmoon.jpg" alt="" /></p>
     <div class="wrapper">
       <header >
-        <p><img src="redmoon.jpg" alt="" /></p>
 	<h1>Chirag Kashyap</h1>
         
           <p>ckashyap@ucdavis.edu</p>
@@ -29,11 +29,11 @@
         </ul>
       </header>
       <section>
-
       
 <hr />
 
 <h1 id="header-1"><a href="#header-1"></a>About Me</h1>
+<p> I am a student at UC Davis, who is majoring in statistics and minoring in computer science.</p>
 
 </section>	
     <footer>
