--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <![endif]-->
   </head>
   <body>
-	<p><img src="redmoon.jpg" alt="" /></p>
     <div class="wrapper">
       <header >
 	<h1>Chirag Kashyap</h1>
@@ -28,7 +27,8 @@
           <li><a href="https://github.com/ckchiruka/ckchiruka.github.io">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
-      <section>
+      </div>
+	<section>
       
 <hr />
 
