--- a/index.html
+++ b/index.html
@@ -33,13 +33,18 @@
 <hr />
 
 <h1 id="header-1"><a href="#header-1"></a>About Me</h1>
-<p> I am a student at UC Davis, who is majoring in statistics and minoring in computer science.</p>
+<p> I am a student at UC Davis, who is majoring in statistics and minoring in computer science. I aspire to be the best I can</p>
+
+<h1 id="header-1"><a href="#header-1"></a>Projects</h1>
+<p> STA 141B </p>
+<p> STA 141A </p>
+<p> STA 138 </p>
 
 </section>
 </div>	
     <footer>
     
-      <p>Copyright Chirag Kashyap © 2016</p>
+      <p>Copyright Chirag Kashyap &copy; 2016</p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
