--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 <h1 id="header-1"><a href="#header-1"></a>About Me</h1>
 <p> I am a student at UC Davis, who is majoring in statistics and minoring in computer science. I aspire to be the best I can</p>
 
-<h1 id="header-1"><a href="#header-1"></a>Projects</h1>
+<h1 id="header-1"><a href="#header-1"></a>Projects/Assignments</h1>
 <p> STA 141B </p>
 <p> STA 141A </p>
 <p> STA 138 </p>
+<p> Other </p>
+	<li> Coming Soon!! </li>
 
 </section>
 </div>	
