--- a/index.html
+++ b/index.html
@@ -36,11 +36,16 @@
 <p> I am a student at UC Davis, who is majoring in statistics and minoring in computer science. I aspire to be the best I can</p>
 
 <h1 id="header-1"><a href="#header-1"></a>Projects/Assignments</h1>
-<p> STA 141B </p>
-<p> STA 141A </p>
-<p> STA 138 </p>
+<ul><p> STA 141B </p>
+</ul>
+<ul><p> STA 141A </p>
+</ul>
+<ul><p> STA 138 </p>
+</ul>
+<ul>
 <p> Other </p>
-	<li> Coming Soon!! </li>
+<li> Coming Soon!! </li>
+</ul>
 
 </section>
 </div>	
