--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 <p> I am a student at UC Davis, who is majoring in statistics and minoring in computer science. I aspire to be the best I can</p>
 
 <h1 id="header-1"><a href="#header-1"></a>Projects/Assignments</h1>
-<ul><p> STA 141B </p>
+<ul><b> STA 141B </b>
 </ul>
-<ul><p> STA 141A </p>
+<ul><b> STA 141A </b>
 </ul>
-<ul><p> STA 138 </p>
+<ul><b> STA 138 </b>
 </ul>
 <ul>
-<p> Other </p>
+<b> Other </b>
 <li> Coming Soon!! </li>
 </ul>
 
