--- a/index.html
+++ b/index.html
@@ -33,14 +33,22 @@
 <hr />
 
 <h1 id="header-1"><a href="#header-1"></a>About Me</h1>
-<p> I am a student at UC Davis, who is majoring in statistics and minoring in computer science. I aspire to be the best I can</p>
+<p> I am a student at UC Davis, who is majoring in statistics and minoring in computer science.</p>
 
 <h1 id="header-1"><a href="#header-1"></a>Projects/Assignments</h1>
 <ul><b> STA 141B </b>
+<li>Final Project: </li>
 </ul>
 <ul><b> STA 141A </b>
+<li>Final Project: </li>
 </ul>
 <ul><b> STA 138 </b>
+<li><a href="projects/concussions.pdf">What Causes Concussions? A Look into the Relationships between Concussion, Gender, Sport, and Year</a><br>
+By comparing multiple log linear models using Akaike’s Information Criterion (AIC), this 
+paper hopes to find the best fitted model for the data along with the conditional odds ratio for that model.
+</li>
+<li> </li>
+<li> </li>
 </ul>
 <ul>
 <b> Other </b>
