--- a/index.html
+++ b/index.html
@@ -43,12 +43,9 @@
 <li>Final Project: </li>
 </ul>
 <ul><b> STA 138 </b>
-<li><a href="projects/concussions.pdf">What Causes Concussions? A Look into the Relationships between Concussion, Gender, Sport, and Year</a><br>
-By comparing multiple log linear models using Akaike’s Information Criterion (AIC), this 
-paper hopes to find the best fitted model for the data along with the conditional odds ratio for that model.
-</li>
-<li> </li>
-<li> </li>
+<li><a href="projects/concussions.pdf">What Causes Concussions? A Look into the Relationships between Concussion, Gender, Sport, and Year</a><br></li>
+<li><a href="projects/fieldgoals.pdf">What is the Predicted Probability of a Field Goal Given Yards?</a><br> </li>
+<li><a href="projects/depressiondiag.pdf">Which Variables Most Accurately Predict a Diagnosis of Depression?</a><br></li>
 </ul>
 <ul>
 <b> Other </b>
