--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 <li>Final Project: </li>
 </ul>
 <ul><b> STA 138 </b>
-<li><a href="projects/concussions.pdf">What Causes Concussions? A Look into the Relationships between Concussion, Gender, Sport, and Year</a><br></li>
-<li><a href="projects/fieldgoals.pdf">What is the Predicted Probability of a Field Goal Given Yards?</a><br> </li>
-<li><a href="projects/depressiondiag.pdf">Which Variables Most Accurately Predict a Diagnosis of Depression?</a><br></li>
+<li><a href="projects/concussions.pdf" target="_blank">What Causes Concussions? A Look into the Relationships between Concussion, Gender, Sport, and Year</a><br></li>
+<li><a href="projects/fieldgoals.pdf" target="_blank">What is the Predicted Probability of a Field Goal Given Yards?</a><br> </li>
+<li><a href="projects/depressiondiag.pdf" target="_blank">Which Variables Most Accurately Predict a Diagnosis of Depression?</a><br></li>
 </ul>
 <ul>
 <b> Other </b>
