--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
 <h1 id="header-1"><a href="#header-1"></a>Projects/Assignments</h1>
 <ul><b> STA 141B </b>
 <li>Final Project: </li>
+<li><a href="projects/assignment1.html" target="_blank">The Doomsday Algorithm: Getting to Know Python</a><br></li>
+<li><a href="projects/assignment2.html" target="_blank">Image Processing Basics and Singular Value Decomposition</a><br></li>
+<li><a href="projects/assignment3.html" target="_blank">Learning How to Use Pandas and Plotting in Python</a><br></li>
+<li><a href="projects/assignment4.html" target="_blank">Calling APIs and More Pandas and Plotting</a><br></li>
+<li><a href="projects/assignment5.html" target="_blank">Learning from Text Using Webscraping</a><br></li>
+<li><a href="projects/assignment6.html" target="_blank">Mapping San Francisco Data and SQL Basics</a><br></li>
 </ul>
 <ul><b> STA 141A </b>
-<li>Final Project: </li>
+<li>Final Project (Doesn't Want to Open on Google Docs)</li>
 </ul>
 <ul><b> STA 138 </b>
 <li><a href="projects/concussions.pdf" target="_blank">What Causes Concussions? A Look into the Relationships between Concussion, Gender, Sport, and Year</a><br></li>
