ONLY FINAL PROJECT LEFT!

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <li><a href="projects/assignment6.html" target="_blank">Mapping San Francisco Data and SQL Basics</a><br></li>
 </ul>
 <ul><b> STA 141A </b>
-<li>Final Project (Doesn't Want to Open on Google Docs)</li>
+<li><a href="projects/internet.pdf" target="_blank">Analyzing the Availability of High Speed Internet in New York</a><br></li>
 </ul>
 <ul><b> STA 138 </b>
 <li><a href="projects/concussions.pdf" target="_blank">What Causes Concussions? A Look into the Relationships between Concussion, Gender, Sport, and Year</a><br></li>
