final one, i feel like i've said that 10 times now

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Chirag Kashyap</title>
+    <title>Chirag's Data Science Adventure</title>
 
     <link href='https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/assets/css/style.css?v=d991e594b816fbe88f65be935894807487924343">
@@ -17,7 +17,8 @@
   <body>
     <div class="wrapper">
       <header >
-	<h1>Chirag Kashyap<br></h1>
+	<h1>Chirag's Data Science Portfolio<br></h1>
+		<p>Check out it out below!</p>
         
         
         <p class="view"><a href="https://github.com/ckchiruka/ckchiruka.github.io">View the Project on GitHub <small></small></a></p>
@@ -63,7 +64,7 @@ embarked on. Thanks for visiting!</p>
 <p>The simple answer to this question is that I am a student who attends UC Davis, and is majoring in statistics and pursuing a minor in computer science. All of 
 this is quite true, but I am also a huge fan of basketball, especially the Golden State Warriors, but I thoroughly enjoy watching ALL basketball. If not for my tendency 
 to get injured while running or playing basketball, I would be probably be balling right now. Besides that I love to listen to wide variety of music, read a wide variety
-of literature, and am starting to eat a wider variety of food. I think that covers most everything if you have any questions about of my projects or just want to 
+of literature, and am starting to eat a wider variety of food. I think that covers most everything. If you have any questions about of my projects or just want to 
 get in touch with me feel free to email me at ckashyap(at)ucdavis(dot)edu.</p>
 
 </section>
