--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header >
 	<h1>Chirag's Data Science Portfolio<br></h1>
-		<p>Y U NO WORK!</p>
+		<p>Click on a link below!</p>
         
         
         <p class="view"><a href="https://github.com/ckchiruka/ckchiruka.github.io">View the Project on GitHub <small></small></a></p>
