--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ embarked on. Thanks for visiting!</p>
 
 <h1 id="header-1"><a href="#header-1"></a>Projects/Assignments</h1>
 <ul><b> STA 141B </b>
-<li><a href="projects/final-project.html" target="_blank">IF YOU'RE READING THIS, THIS ISN'T THE FINISHED PROJECT: How Has Position in the NBA Changed Over Time?</a><br></li>
+<li><a href="projects/final-project.html" target="_blank">FINAL PROJECT: How Has Position in the NBA Changed Over Time?</a><br></li>
 <li><a href="projects/assignment1.html" target="_blank">The Doomsday Algorithm: Getting to Know Python</a><br></li>
 <li><a href="projects/assignment2.html" target="_blank">Image Processing Basics and Singular Value Decomposition</a><br></li>
 <li><a href="projects/assignment3.html" target="_blank">Learning How to Use Pandas and Plotting in Python</a><br></li>
