final commit for final project

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h1 id="header-1"><a href="#header-1"></a>The Purpose of this Website</h1>
 <p>The purpose of this website is quite simple: to showcase my data science skills and various projects that I have contributed to. It's also here so that 
 people can get to know me better. So, I hope you enjoy looking at the various projects below and come back soon to see what new data driven adventures I have 
-embarked on. Thanks for visiting!</p>
+embarked on. Thanks for visiting!<br></p>
 
 <h1 id="header-1"><a href="#header-1"></a>Projects/Assignments</h1>
 <ul><b> STA 141B </b>
