Add ECS 132 Project

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ people can get to know me better. So, I hope you enjoy looking at the various pr
 embarked on. Thanks for visiting!<br></p>
 
 <h1 id="header-1"><a href="#header-1"></a>Projects/Assignments</h1>
-<ul><b> STA 141B </b>
+<ul><b> STA 141B: Data & Web Technologies for Data Analysis  </b>
 <li><a href="projects/final-project.html" target="_blank">FINAL PROJECT: How Has Position in the NBA Changed Over Time?</a><br></li>
 <li><a href="projects/assignment1.html" target="_blank">The Doomsday Algorithm: Getting to Know Python</a><br></li>
 <li><a href="projects/assignment2.html" target="_blank">Image Processing Basics and Singular Value Decomposition</a><br></li>
@@ -47,10 +47,13 @@ embarked on. Thanks for visiting!<br></p>
 <li><a href="projects/assignment5.html" target="_blank">Learning from Text Using Webscraping</a><br></li>
 <li><a href="projects/assignment6.html" target="_blank">Mapping San Francisco Data and SQL Basics</a><br></li>
 </ul>
-<ul><b> STA 141A </b>
+<ul><b> ECS 132: Probability and Statistical Modeling for Computer Science </b>
 <li><a href="projects/internet.pdf" target="_blank">Analyzing the Availability of High Speed Internet in New York</a><br></li>
 </ul>
-<ul><b> STA 138 </b>
+<ul><b> STA 141A: Fundamentals of Statistical Data Science </b>
+<li><a href="projects/denoise_pca.pdf" target="_blank">Creating a Low-Pass Filter and Exploring MSE in PCA Regression</a><br></li>
+</ul>
+<ul><b> STA 138: Analysis of Categorical Data </b>
 <li><a href="projects/concussions.pdf" target="_blank">What Causes Concussions? A Look into the Relationships between Concussion, Gender, Sport, and Year</a><br></li>
 <li><a href="projects/fieldgoals.pdf" target="_blank">What is the Predicted Probability of a Field Goal Given Yards?</a><br> </li>
 <li><a href="projects/depressiondiag.pdf" target="_blank">Which Variables Most Accurately Predict a Diagnosis of Depression?</a><br></li>
