--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Chirag's Data Science Adventure</title>
+    <title>Chirag Kashyap's Data Science Portfolia</title>
 
     <link href='https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/assets/css/style.css?v=d991e594b816fbe88f65be935894807487924343">
@@ -37,6 +37,12 @@
 people can get to know me better. So, I hope you enjoy looking at the various projects below and come back soon to see what new data driven adventures I have 
 embarked on. Thanks for visiting!<br></p>
 
+
+<ul><b> STA 160: Practice in Stastical Data Science</b>
+<li><a href="https://github.com/pvacek/160-Team-Duncan" target="_blank">An Analysis of NBA Ball Motion Data</a><br></li>
+</ul>
+
+
 <h1 id="header-1"><a href="#header-1"></a>Projects/Assignments</h1>
 <ul><b> STA 141B: Data & Web Technologies for Data Analysis  </b>
 <li><a href="projects/final-project.html" target="_blank">FINAL PROJECT: How Has Position in the NBA Changed Over Time?</a><br></li>
@@ -58,16 +64,9 @@ embarked on. Thanks for visiting!<br></p>
 <li><a href="projects/fieldgoals.pdf" target="_blank">What is the Predicted Probability of a Field Goal Given Yards?</a><br> </li>
 <li><a href="projects/depressiondiag.pdf" target="_blank">Which Variables Most Accurately Predict a Diagnosis of Depression?</a><br></li>
 </ul>
-<ul>
-<b> Other </b>
-<li> Coming Soon!! </li>
-</ul>
 
-<h1 id="header-1"><a href="#header-1"></a>Who Am I?</h1>
-<p>The simple answer to this question is that I am a student who attends UC Davis, and is majoring in statistics and pursuing a minor in computer science. All of 
-this is quite true, but I am also a huge fan of basketball, especially the Golden State Warriors, but I thoroughly enjoy watching ALL basketball. If not for my tendency 
-to get injured while running or playing basketball, I would be probably be balling right now. Besides that I love to listen to wide variety of music, read a wide variety
-of literature, and am starting to eat a wider variety of food. I think that covers most everything. If you have any questions about of my projects or just want to 
+
+<p>If you have any questions about of my projects or just want to 
 get in touch with me feel free to email me at ckashyap(at)ucdavis(dot)edu.</p>
 
 </section>
