--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Chirag Kashyap's Data Science Portfolia</title>
+    <title>Chirag Kashyap's Data Science Portfolio</title>
 
     <link href='https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/assets/css/style.css?v=d991e594b816fbe88f65be935894807487924343">
@@ -38,12 +38,10 @@ people can get to know me better. So, I hope you enjoy looking at the various pr
 embarked on. Thanks for visiting!<br></p>
 
 
-<ul><b> STA 160: Practice in Stastical Data Science</b>
-<li><a href="https://github.com/pvacek/160-Team-Duncan" target="_blank">An Analysis of NBA Ball Motion Data</a><br></li>
-</ul>
-
-
 <h1 id="header-1"><a href="#header-1"></a>Projects/Assignments</h1>
+<ul><b> STA 160: Practice in Stastical Data Science</b>
+<li><a href="https://github.com/pvacek/160-Team-Duncan" target="_blank">FINAL PROJECT: An Analysis of NBA Ball Motion Data</a><br></li>
+</ul>
 <ul><b> STA 141B: Data & Web Technologies for Data Analysis  </b>
 <li><a href="projects/final-project.html" target="_blank">FINAL PROJECT: How Has Position in the NBA Changed Over Time?</a><br></li>
 <li><a href="projects/assignment1.html" target="_blank">The Doomsday Algorithm: Getting to Know Python</a><br></li>
